fix issues overlap carousel and navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ body, row{
         }
 }
 
+#carouselSwipe{
+    margin-top: 5%;
+}
+
 #paragraphs{
     margin: auto;
     width: 50%;
